--- a/templates/chat.html
+++ b/templates/chat.html
@@ -99,7 +99,7 @@
         </ul>
         
         <form class="d-flex" role="search">Upstox&nbsp;
-          <input class="form-control me-2" type="search" placeholder="future & Option Trading " aria-label="Search">
+          <input class="form-control me-2" type="search" required placeholder="future & Option Trading " aria-label="Search">
          
           <a class="btn btn-outline-success" href="https://upstox.com/open-demat-account/?f=4WBMU4">Start</a>
         </form>
