--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
 
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta charset="UTF-8">
+     <meta charset="UTF-8"><meta name="google-site-verification" content="C3xOP24l2anMn2V6dAcslV3XEtViz0KefdPeY5lQxfc" />
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <meta name="description" content="All data for options trading in one Screen , live TradinView   
      Chart of top Security DJI Future , Nifty 50 , Banknifty ,Nifty & Banknifty CE-PE Price ,Nifty OI data, SgxNifty,
@@ -14,7 +14,7 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script><meta name="google-site-verification" content="C3xOP24l2anMn2V6dAcslV3XEtViz0KefdPeY5lQxfc" />
      <meta name="keywords" content="Traderharish ,coderharish , Traderharish epizy ,open interest,call put ratio, Sgxnifty live , usa DJI, nifty oi , Banknifty, bitcoin, Global market, dollar index, forex trading ,Crypto, eth, Cryptocurriences, option-chain ,option trading future, Sensex, reliance, tcs ,stock equity, penny stocks, tata motors, zomato share, yes bank share, Pcr open interest, Nse ,mcx, bse, nyse, Dji, uk100, nifty50, russia ukraine war, crudeoil , dollar , gbp,usdinr, gold,silver, stock market crash , recession, adani debt, adani group,tata ,tesla stocks, ev,elon musk, american market ">
      <meta name="author" content="Traderharish ">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-MNTNN1CDW4"></script>
